# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  data_parsing.py  diffgen.py  files_parsing.py  gendifflib.py
gendiff/diffformat/: __init__.py  stylish.py
gendiff/formatdiff/: __init__.py  plain.py  stylish.py
gendiff/scripts/: cli.py  gen_diff.py  gendiff.py
tests/: test_diffgen.py  test_gendifflib.py
tests/fixtures/: dataset.json  datasets.py  file1.json  ndiff12.txt  nfile1.json  nfile1.yaml  nfile2.json  nfile2.yml  result.json  results.py
